# information-flow-routes

./: LICENSE  Makefile  pyproject.toml
notebooks/: antonym_task.ipynb  antonym_task.py  counterfactual_template.ipynb  counterfactual_template.py  indirect_identification_task.ipynb  indirect_identification_task.py
src/information_flow_routes/: __init__.py  graph.py  metrics.py  model.py  utilities.py  visualization.py
tests/unit/: test_metrics.py  test_model.py
