[project]
name = "information-flow-routes"
version = "0.1.0"
description = "Ferrando and Voita's Information Flow Routes using nnsight"
authors = [
    {name = "Francisco Piedrahita Velez", email = "fpiedrah@brown.edu"},
]
dependencies = ["beartype>=0.20.2", "einops>=0.8.1", "fancy-einsum>=0.0.3", "matplotlib>=3.10.1", "networkx>=3.4.2", "nnsight>=0.4.5", "seaborn>=0.13.2", "torch>=2.6.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "BSD 3"}

[project.optional-dependencies]
linting = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "nbqa>=1.9.1",
    "ruff>=0.11.5",
]
testing = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
]
notebooks = [
    "jupyterlab>=4.4.0",
    "marimo>=0.12.8",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
